--- a/taskmanager/templates/add_category.html
+++ b/taskmanager/templates/add_category.html
@@ -8,7 +8,7 @@
         <!-- category_name -->
         <div class="row">
             <div class="input-field col s12">
-                <i class="fas fa-folder-open-open prefix purple-text"></i>
+                <i class="fas fa-folder-open prefix purple-text"></i>
                 <input id="category_name" name="category_name" minlength="3" maxlength="25" type="text" class="validate" class="validate">
                 <label for="category_name">Category Name</label>
             </div>
