add delete functionality

--- a/taskmanager/templates/base.html
+++ b/taskmanager/templates/base.html
@@ -20,7 +20,7 @@
     <header>
         <nav class="deep-purple accent-2">
             <div class="nav-wrapper">
-                <a href="{{ url_for('home') }}" class="brand-logo">Task Manager</a>
+                <a href="{{ url_for('home') }}" class="logo fa-solid fa-book fa-xl"> Task Manager</a>
                 <a href="#" data-target="mobile-demo" class="sidenav-trigger"><i class="fas fa-bars"></i></a>
                 <ul class="right hide-on-med-and-down">
                     <li><a href="{{ url_for('home') }}">Home</a></li>
@@ -45,8 +45,7 @@
     <footer class="page-footer deep-purple accent-2">
         <div class="footer-copyright">
             <div class="container">
-                For educational purpose only
-                <a class="white-text right" href="https://codeinstitute.net" target="_blank">&copy; Code Institute</a>
+                <a class="white-text center-align" href="https://codeinstitute.net" target="_blank"><p> &copy; Humberto Pereira </p></a>
             </div>
         </div>
     </footer>
