--- a/taskmanager/templates/categories.html
+++ b/taskmanager/templates/categories.html
@@ -20,7 +20,20 @@
             </div>
             <div class="card-action">
                 <a href="{{ url_for('edit_category', category_id=category.id) }}" class="btn green accent-4">Edit</a>
-                <a href="{{ url_for('delete_category', category_id=category.id) }}" class="btn red">Delete</a>
+                <a href="#modal-{{ category.id }}" class="btn red modal-trigger">Delete</a>
+
+                <!-- Modal Structure -->
+                <div id="modal-{{ category.id }}" class="modal">
+                    <div class="modal-content">
+                        <h4>Are you sure you want to delete this category?</h4>
+                        <p>All the tasks contained in this category will be deleted!</p>
+                        <p>This action cannot be undone</p>
+                    </div>
+                    <div class="modal-footer">
+                        <a href="{{ url_for('delete_category', category_id=category.id) }}" class="btn red">Delete</a>
+                        <a href="" class="btn-green accent-4 modal-close">Cancel</a>
+                    </div>
+                </div>
             </div>
         </div>
     </div>
